[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,27 @@
 <html>
+    <head>
+        <title>
+           article-one/aishwarya 
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+        article-one
+        </h3>
+        <div>
+            feb 5 2016
+        </div>
+         <div>
+          <p>GtHub is a Git repository hosting service, but it adds many of its own features. While Git is a command line tool, GitHub provides a Web-based graphical interface. It also provides access control and several collaboration features, such as a wikis and basic task management tools for every project.
+          </p>
+          <p>
+             aishwarya here
+          </p>
+        </div>
+        
+    </body>
 </html>
