[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-           article-one/aishwarya 
+           article-one|aishwarya 
         </title>
     </head>
     <body>
