--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,9 +6,9 @@
         <meta name='viewport' content="width=device width, initial scale=1"/>
         <style>
         .container;{
-            max width:800px;
+            max-width:800px;
             color:grey;
-            margin:; 0 auto;
+            margin: 0 auto;
             font-family:sans serif;
         }
         
@@ -34,6 +34,5 @@
              aishwarya here
           </p>
         </div>
-        </div>
-    </body>
-</html>
+      </div>
+    
