--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         <style>
         .container {
             max-width:800px;
-            color:black;
+            color:blue;
             margin: 0 auto;
             font-family:sans-serif;
         }
