--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,13 @@
         <meta name='viewport' content="width=device width, initial scale=1"/>
         <style>
         .container {
-            max-width:800px;
-            color:blue;
+            max-width: 800px;
+            color: blue;
             margin: 0 auto;
-            font-family:sans-serif;
+            font-family: sans-serif;
+            padding-top: 80px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
         
         
