--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,14 +4,16 @@
            article-two|aishwarya 
         </title>
         <meta name='viewport' content="width=device width, initial scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div>
+        <div class="container">
+            <div>
             <a href="/">home</a>
         </div>
         <hr/>
         <h3>
-        article-2
+        article-one
         </h3>
         <div>
             feb 5 2016
@@ -23,6 +25,6 @@
              aishwarya here
           </p>
         </div>
-        
-    </body>
-</html>
+      </div>
+    </html>
+    
