--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,19 +4,9 @@
            article-one|aishwarya 
         </title>
         <meta name='viewport' content="width=device width, initial scale=1"/>
-        <style>
-        .container {
-            max-width: 800px;
-            color: blue;
-            margin: 0 auto;
-            font-family: sans-serif;
-            padding-top: 80px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
+        <link href="/ui/style.css" rel="stylesheet" />
         
         
-        </style>
     </head>
     <body>
         <div class="container">
