[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,17 +1,19 @@
 <html>
     <head>
-        <title>
-           article-three|aishwarya 
-        </title>
+         <title>
+           article-one|aishwarya 
+         </title>
         <meta name='viewport' content="width=device width, initial scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
-    <body>
-        <div>
+   <body>
+        <div class="container">
+            <div>
             <a href="/">home</a>
         </div>
         <hr/>
         <h3>
-        article-three
+        article-one
         </h3>
         <div>
             feb 5 2016
@@ -23,6 +25,6 @@
              aishwarya here
           </p>
         </div>
-        
-    </body>
-</html>
+      </div>
+    </html>
+    
