--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -13,7 +13,7 @@
         </div>
         <hr/>
         <h3>
-        article-one
+        article-2
         </h3>
         <div>
             feb 5 2016
