[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,7 +1,7 @@
 <html>
     <head>
          <title>
-           article-one|aishwarya 
+           article-3|aishwarya 
          </title>
         <meta name='viewport' content="width=device width, initial scale=1"/>
         <link href="/ui/style.css" rel="stylesheet" />
@@ -13,7 +13,7 @@
         </div>
         <hr/>
         <h3>
-        article-one
+        article3
         </h3>
         <div>
             feb 5 2016
