--- a/ui/index.html
+++ b/ui/index.html
@@ -24,6 +24,9 @@
             Hi! I am aishwarya and this is my new webapp.
             
         </div>
+        <hr/>
+        <div class="footer">
+            this button <button id="counter">Click me!</button>has been clicked<span id="count">0</span>times.
         </div>
        
         <script type="text/javascript" src="/ui/main.js">
